Media censorship, add attribute for divergent transcripts, fix SQL error for transcript access.